updated examples to ignore unknown JSON fields

--- a/java/jackson/Makefile
+++ b/java/jackson/Makefile
@@ -2,7 +2,7 @@ all:
 	mkdir -p classes
 	javac \
 		-sourcepath src \
-		-classpath lib/jackson-databind-2.0.1.jar:lib/jackson-databind-2.0.1.jar:lib/jackson-core-2.0.1.jar:. \
+		-classpath lib/jackson-annotations-2.0.1.jar:lib/jackson-databind-2.0.1.jar:lib/jackson-core-2.0.1.jar:. \
 		src/com/acme/datatypes/UserTest.java \
 		-d classes
 
